--- a/package.json
+++ b/package.json
@@ -3,12 +3,16 @@
   "module": "index.ts",
   "type": "module",
   "devDependencies": {
-    "@types/bun": "latest"
+    "@types/bun": "latest",
+    "@types/react": "18.2.73",
+    "@types/react-dom": "18.2.22"
   },
   "peerDependencies": {
     "typescript": "^5.0.0"
   },
   "dependencies": {
-    "@maverick-js/signals": "5.11.4"
+    "@maverick-js/signals": "5.11.4",
+    "react": "18.2.0",
+    "react-dom": "18.2.0"
   }
 }
