--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
   "name": "juno",
   "private": true,
-  "dependencies": {
-    "@maverick-js/signals": "5.11.4"
+  "version": "0.0.0",
+  "type": "module",
+  "scripts": {
+    "dev": "vite",
+    "build": "tsc && vite build",
+    "preview": "vite preview"
   },
   "devDependencies": {
-    "@types/bun": "latest",
-    "@types/react": "18.2.73",
-    "@types/react-dom": "18.2.22",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "typescript": "5.4.5"
+    "typescript": "^5.2.2",
+    "vite": "^5.2.0"
   }
 }
