--- a/package.json
+++ b/package.json
@@ -12,5 +12,8 @@
     "typescript": "^5.2.2",
     "vite": "^5.2.0",
     "vite-tsconfig-paths": "4.3.2"
+  },
+  "dependencies": {
+    "@maverick-js/signals": "5.11.5"
   }
 }
