--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "preview": "vite preview"
   },
   "devDependencies": {
-    "typescript": "^5.2.2",
-    "vite": "^5.2.0",
+    "typescript": "5.2.2",
+    "vite": "5.2.0",
     "vite-tsconfig-paths": "4.3.2"
   },
   "dependencies": {
