--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "devDependencies": {
     "typescript": "5.2.2",
     "vite": "5.2.0",
+    "vite-plugin-inspect": "0.8.4",
     "vite-tsconfig-paths": "4.3.2"
   },
   "dependencies": {
