--- a/package.json
+++ b/package.json
@@ -4,17 +4,20 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "bun run src/server.ts",
     "build": "tsc && vite build",
     "preview": "vite preview"
   },
   "devDependencies": {
+    "@types/express": "4.17.21",
+    "chalk": "5.3.0",
     "typescript": "5.2.2",
     "vite": "5.2.0",
     "vite-plugin-inspect": "0.8.4",
     "vite-tsconfig-paths": "4.3.2"
   },
   "dependencies": {
-    "@maverick-js/signals": "5.11.5"
+    "@maverick-js/signals": "5.11.5",
+    "express": "4.19.2"
   }
 }
