--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "devDependencies": {
     "@types/express": "4.17.21",
     "chalk": "5.3.0",
+    "cli-cursor": "4.0.0",
     "typescript": "5.2.2",
     "vite": "5.2.0",
     "vite-plugin-inspect": "0.8.4",
