--- a/package.json
+++ b/package.json
@@ -4,9 +4,7 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "tsc && vite build",
-    "preview": "vite preview"
+    "dev": "bun run src/server.ts"
   },
   "devDependencies": {
     "@types/express": "4.17.21",
