--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
   },
   "devDependencies": {
     "@types/express": "4.17.21",
+    "@types/react": "18.3.1",
     "chalk": "5.3.0",
     "cli-cursor": "4.0.0",
+    "react": "18.3.1",
     "typescript": "5.2.2",
     "vite": "5.2.0",
     "vite-plugin-inspect": "0.8.4",
