--- a/package.json
+++ b/package.json
@@ -7,11 +7,13 @@
     "dev": "bun run src/server.ts"
   },
   "devDependencies": {
+    "@swc/core": "1.5.5",
     "@types/express": "4.17.21",
     "@types/react": "18.3.1",
     "chalk": "5.3.0",
     "cli-cursor": "4.0.0",
     "react": "18.3.1",
+    "recast": "0.23.7",
     "typescript": "5.2.2",
     "vite": "5.2.0",
     "vite-plugin-inspect": "0.8.4",
