--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,9 @@
     "lib": ["ES2020", "DOM", "DOM.Iterable"],
     "skipLibCheck": true,
 
+    /* JSX */
+    "jsx": "react-jsxdev",
+
     /* Bundler mode */
     "moduleResolution": "bundler",
     "allowImportingTsExtensions": true,
@@ -21,5 +24,5 @@
 
     "baseUrl": "./src"
   },
-  "include": ["src"]
+  "include": ["src", "pages"]
 }
