--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "bun run juno/devServer.ts"
+    "dev": "bun run juno/server.ts"
   },
   "devDependencies": {
     "@swc/core": "1.5.5",
