--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "dependencies": {
     "@maverick-js/signals": "5.11.5",
-    "express": "4.19.2"
+    "express": "4.19.2",
+    "fp-ts": "2.16.6"
   }
 }
