--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "version": "0.3.0",
   "type": "module",
   "scripts": {
-    "dev": "bun run juno/server.ts"
+    "dev": "bun run juno/server.ts",
+    "test": "vitest"
   },
   "devDependencies": {
     "@swc/core": "1.5.7",
@@ -19,7 +20,8 @@
     "vite": "5.2.0",
     "vite-plugin-full-reload": "1.1.0",
     "vite-plugin-inspect": "0.8.4",
-    "vite-tsconfig-paths": "4.3.2"
+    "vite-tsconfig-paths": "4.3.2",
+    "vitest": "2.1.1"
   },
   "dependencies": {
     "@maverick-js/signals": "5.11.5",
