--- a/package.json
+++ b/package.json
@@ -3,5 +3,8 @@
   "private": true,
   "keywords": [],
   "author": "Lukas Bombach",
-  "license": "MIT"
+  "license": "MIT",
+  "scripts": {
+    "dev": "pnpm --filter @juno/spike_02 dev"
+  }
 }
