--- a/packages/vite-plugin/package.json
+++ b/packages/vite-plugin/package.json
@@ -1,8 +1,9 @@
 {
-  "name": "@juno/vite-plugin",
+  "name": "@juno/vite-plugin-juno",
   "version": "1.0.0",
   "description": "",
   "main": "src/index.js",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
