--- a/package.json
+++ b/package.json
@@ -6,5 +6,11 @@
   "license": "MIT",
   "scripts": {
     "dev": "pnpm --filter @juno/spike_02 dev"
+  },
+  "devDependencies": {
+    "@types/node": "22.9.0",
+    "@types/react": "18.3.12",
+    "typescript": "5.6.2",
+    "vite": "5.4.10"
   }
 }
