--- a/packages/ssr/package.json
+++ b/packages/ssr/package.json
@@ -2,14 +2,11 @@
   "name": "@juno/ssr",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "src/index.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
-  "license": "MIT",
-  "devDependencies": {
-    "@types/react": "18.3.12"
-  }
+  "license": "MIT"
 }
