--- a/packages/vite-plugin/package.json
+++ b/packages/vite-plugin/package.json
@@ -2,15 +2,12 @@
   "name": "@juno/vite-plugin-juno",
   "version": "1.0.0",
   "description": "",
-  "main": "src/index.js",
+  "main": "src/index.ts",
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
-  "license": "ISC",
-  "devDependencies": {
-    "vite": "5.4.10"
-  }
+  "license": "MIT"
 }
