--- a/apps/spike_02/package.json
+++ b/apps/spike_02/package.json
@@ -1,10 +1,9 @@
 {
   "name": "@juno/spike_02",
   "private": true,
-  "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "NODE_OPTIONS='--import tsx' vite",
     "build": "tsc && vite build",
     "preview": "vite preview"
   },
