--- a/packages/ssr/package.json
+++ b/packages/ssr/package.json
@@ -1,12 +1,6 @@
 {
   "name": "@juno/ssr",
   "version": "1.0.0",
-  "description": "",
-  "main": "src/index.ts",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "MIT"
+  "type": "module",
+  "main": "src/index.ts"
 }
