--- a/packages/vite-plugin/package.json
+++ b/packages/vite-plugin/package.json
@@ -1,13 +1,6 @@
 {
   "name": "@juno/vite-plugin-juno",
   "version": "1.0.0",
-  "description": "",
-  "main": "src/index.ts",
   "type": "module",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "MIT"
+  "main": "src/index.ts"
 }
