--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "devDependencies": {
     "@types/node": "22.9.0",
     "@types/react": "18.3.12",
+    "react": "18.3.1",
     "tsx": "4.19.2",
     "typescript": "5.6.2",
     "vite": "5.4.10"
