juno client mock hydrate

--- a/apps/spike_02/package.json
+++ b/apps/spike_02/package.json
@@ -8,6 +8,7 @@
     "preview": "vite preview"
   },
   "devDependencies": {
+    "@juno/client": "workspace:*",
     "@juno/vite-plugin-juno": "workspace:*"
   }
 }
