--- a/packages/transform/package.json
+++ b/packages/transform/package.json
@@ -2,5 +2,13 @@
   "name": "@juno/transform",
   "version": "1.0.0",
   "type": "module",
-  "main": "package.ts"
+  "main": "package.ts",
+  "dependencies": {
+    "@swc/core": "1.9.1",
+    "lodash": "4.17.21"
+  },
+  "devDependencies": {
+    "@swc/types": "0.1.12",
+    "@types/lodash": "4.17.13"
+  }
 }
