--- a/packages/transform/package.json
+++ b/packages/transform/package.json
@@ -5,10 +5,10 @@
   "main": "package.ts",
   "dependencies": {
     "@swc/core": "1.9.1",
-    "lodash": "4.17.21"
+    "lodash-es": "4.17.21"
   },
   "devDependencies": {
     "@swc/types": "0.1.12",
-    "@types/lodash": "4.17.13"
+    "@types/lodash-es": "4.17.12"
   }
 }
