--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -2,5 +2,8 @@
   "name": "@juno/client",
   "version": "1.0.0",
   "type": "module",
-  "main": "package.ts"
+  "main": "package.ts",
+  "dependencies": {
+    "@maverick-js/signals": "6.0.0"
+  }
 }
