--- a/apps/spike/package.json
+++ b/apps/spike/package.json
@@ -8,7 +8,7 @@
     "preview": "vite preview"
   },
   "devDependencies": {
-    "@juno/client": "workspace:*",
+    "@juno/hydrate": "workspace:*",
     "@juno/vite-plugin-juno": "workspace:*",
     "vite-plugin-inspect": "0.8.7"
   },
