--- a/packages/transform_server/package.json
+++ b/packages/transform_server/package.json
@@ -4,6 +4,7 @@
   "type": "module",
   "main": "package.ts",
   "dependencies": {
-    "@juno/parse": "workspace:*"
+    "@juno/parse": "workspace:*",
+    "@juno/pipe": "workspace:*"
   }
 }
