--- a/packages/traverse/package.json
+++ b/packages/traverse/package.json
@@ -1,10 +1,9 @@
 {
-  "name": "@juno/pipe",
+  "name": "@juno/traverse",
   "version": "1.0.0",
   "type": "module",
   "main": "package.ts",
   "dependencies": {
-    "@juno/parse": "workspace:*",
-    "@juno/traverse": "workspace:*"
+    "@juno/parse": "workspace:*"
   }
 }
