--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "author": "Lukas Bombach",
   "license": "MIT",
   "scripts": {
-    "dev": "pnpm --filter @juno/spike_02 dev"
+    "dev": "pnpm --filter @juno/spike dev"
   },
   "devDependencies": {
     "@types/node": "22.9.0",
