--- a/packages/vite-plugin/package.json
+++ b/packages/vite-plugin/package.json
@@ -5,7 +5,6 @@
   "main": "package.ts",
   "devDependencies": {
     "@juno/ssr": "workspace:*",
-    "@juno/transform": "workspace:*",
-    "@juno/transform_server": "workspace:*"
+    "@juno/transform": "workspace:*"
   }
 }
