--- a/apps/homepage/package.json
+++ b/apps/homepage/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.1.11",
     "astro": "5.12.0",
+    "monaco-editor": "0.52.2",
     "tailwindcss": "^4.1.11"
   }
 }
