--- a/apps/homepage/package.json
+++ b/apps/homepage/package.json
@@ -9,9 +9,9 @@
     "astro": "astro"
   },
   "dependencies": {
-    "@tailwindcss/vite": "^4.1.11",
+    "@tailwindcss/vite": "4.1.11",
     "astro": "5.12.0",
     "monaco-editor": "0.52.2",
-    "tailwindcss": "^4.1.11"
+    "tailwindcss": "4.1.11"
   }
 }
