--- a/apps/homepage/package.json
+++ b/apps/homepage/package.json
@@ -9,9 +9,15 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/react": "4.3.0",
+    "@monaco-editor/react": "4.7.0",
     "@tailwindcss/vite": "4.1.11",
+    "@types/react": "19.1.9",
+    "@types/react-dom": "19.1.7",
     "astro": "5.12.0",
     "monaco-editor": "0.52.2",
+    "react": "19.1.1",
+    "react-dom": "19.1.1",
     "tailwindcss": "4.1.11"
   }
 }
