--- a/apps/homepage/package.json
+++ b/apps/homepage/package.json
@@ -15,6 +15,7 @@
     "@types/react-dom": "19.1.7",
     "astro": "5.12.0",
     "monaco-editor": "0.52.2",
+    "monaco-themes": "0.4.6",
     "react": "19.1.1",
     "react-dom": "19.1.1",
     "tailwindcss": "4.1.11"
