--- a/apps/homepage/package.json
+++ b/apps/homepage/package.json
@@ -14,6 +14,7 @@
     "@types/react": "19.1.9",
     "@types/react-dom": "19.1.7",
     "astro": "5.12.0",
+    "juno-astro": "workspace:*",
     "monaco-editor": "0.52.2",
     "monaco-themes": "0.4.6",
     "react": "19.1.1",
