--- a/packages/astro/package.json
+++ b/packages/astro/package.json
@@ -3,12 +3,12 @@
   "version": "1.0.0",
   "type": "module",
   "exports": {
-    "./client": "./dist/client.js",
-    "./server": "./dist/server.js",
-    ".": "./dist/index.js"
+    "./client": "./src/client.ts",
+    "./server": "./src/server.ts",
+    ".": "./src/index.ts"
   },
   "files": [
-    "dist"
+    "src"
   ],
   "scripts": {
     "build": "tsup src/*.ts --dts --clean --format esm"
