--- a/packages/astro/package.json
+++ b/packages/astro/package.json
@@ -3,9 +3,9 @@
   "version": "1.0.0",
   "type": "module",
   "exports": {
-    "./client": "./src/client.ts",
-    "./server": "./src/server.ts",
-    ".": "./src/index.ts"
+    ".": "./src/index.ts",
+    "./server.ts": "./src/server.ts",
+    "./client.ts": "./src/client.ts"
   },
   "files": [
     "src"
