--- a/packages/juno-astro/package.json
+++ b/packages/juno-astro/package.json
@@ -5,7 +5,8 @@
   "exports": {
     ".": "./src/index.ts",
     "./server.ts": "./src/server.ts",
-    "./client.ts": "./src/client.ts"
+    "./client.ts": "./src/client.ts",
+    "./jsx-dev-runtime": "./src/jsxRuntime.ts"
   },
   "files": [
     "src"
