--- a/packages/juno-astro/package.json
+++ b/packages/juno-astro/package.json
@@ -18,5 +18,8 @@
     "astro": "5.12.0",
     "tsup": "8.5.0",
     "typescript": "5.6.2"
+  },
+  "dependencies": {
+    "oxc-parser": "0.81.0"
   }
 }
