--- a/packages/juno-astro/package.json
+++ b/packages/juno-astro/package.json
@@ -19,7 +19,8 @@
     "fp-ts": "2.16.10",
     "juno-ast": "file:../juno-ast",
     "lodash": "4.17.21",
-    "oxc-parser": "0.81.0"
+    "oxc-parser": "0.81.0",
+    "oxc-transform": "0.82.0"
   },
   "devDependencies": {
     "astro": "5.12.0",
