--- a/packages/juno-astro/package.json
+++ b/packages/juno-astro/package.json
@@ -22,6 +22,7 @@
   },
   "devDependencies": {
     "astro": "5.12.0",
+    "cli-highlight": "2.1.11",
     "tsup": "8.5.0",
     "typescript": "5.6.2"
   }
