--- a/apps/homepage/package.json
+++ b/apps/homepage/package.json
@@ -18,6 +18,7 @@
     "tailwindcss": "4.1.11"
   },
   "devDependencies": {
+    "vite-plugin-inspect": "0.8.7",
     "vite-plugin-restart": "0.4.2"
   }
 }
