--- a/packages/juno-ast/package.json
+++ b/packages/juno-ast/package.json
@@ -10,6 +10,10 @@
     "cli-highlight": "2.1.11",
     "esrap": "2.1.0",
     "fp-ts": "2.16.10",
+    "lodash": "4.17.21",
     "oxc-parser": "0.81.0"
+  },
+  "devDependencies": {
+    "@types/lodash": "4.17.20"
   }
 }
