--- a/packages/juno-astro/package.json
+++ b/packages/juno-astro/package.json
@@ -6,6 +6,7 @@
     ".": "./src/index.ts",
     "./server.ts": "./src/server.ts",
     "./client.ts": "./src/client.ts",
+    "./jsx-runtime": "./src/jsxRuntime.ts",
     "./jsx-dev-runtime": "./src/jsxRuntime.ts"
   },
   "files": [
