--- a/packages/juno-astro/package.json
+++ b/packages/juno-astro/package.json
@@ -18,16 +18,16 @@
   "dependencies": {
     "chalk": "5.6.2",
     "esrap": "2.1.0",
-    "fp-ts": "2.16.10",
-    "oxc-parser": "0.86.0",
-    "juno-ast": "file:../juno-ast"
+    "fp-ts": "2.16.11",
+    "juno-ast": "file:../juno-ast",
+    "oxc-parser": "0.87.0"
   },
   "devDependencies": {
     "@sveltejs/acorn-typescript": "1.0.5",
     "acorn": "8.15.0",
-    "astro": "5.12.0",
+    "astro": "5.13.7",
     "cli-highlight": "2.1.11",
     "tsup": "8.5.0",
-    "typescript": "5.6.2"
+    "typescript": "5.9.2"
   }
 }
