--- a/package.json
+++ b/package.json
@@ -8,12 +8,12 @@
     "dev": "pnpm --filter @juno/homepage dev"
   },
   "devDependencies": {
-    "@types/node": "24.3.3",
-    "@types/react": "19.1.13",
-    "react": "19.1.1",
-    "tsx": "4.20.5",
-    "typescript": "5.9.2",
-    "vite": "7.1.5"
+    "@types/node": "24.7.0",
+    "@types/react": "19.2.0",
+    "react": "19.2.0",
+    "tsx": "4.20.6",
+    "typescript": "5.9.3",
+    "vite": "7.1.9"
   },
-  "packageManager": "pnpm@10.16.1+sha512.0e155aa2629db8672b49e8475da6226aa4bdea85fdcdfdc15350874946d4f3c91faaf64cbdc4a5d1ab8002f473d5c3fcedcd197989cf0390f9badd3c04678706"
+  "packageManager": "pnpm@10.18.1"
 }
