--- a/apps/homepage/package.json
+++ b/apps/homepage/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@maverick-js/signals": "6.0.0",
+    "@preact/signals-core": "1.12.1",
     "@tailwindcss/vite": "4.1.14",
     "astro": "5.14.1",
     "juno-astro": "file:../../packages/juno-astro",
