--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "author": "Lukas Bombach",
   "license": "MIT",
   "scripts": {
-    "dev": "pnpm --filter @juno/homepage dev"
+    "dev": "pnpm --filter @juno/homepage dev",
+    "build": "pnpm --filter @juno/homepage build",
+    "preview": "pnpm --filter @juno/homepage preview"
   },
   "devDependencies": {
     "@types/node": "24.7.0",
