--- a/packages/juno-astro/package.json
+++ b/packages/juno-astro/package.json
@@ -4,6 +4,7 @@
   "type": "module",
   "exports": {
     ".": "./src/index.ts",
+    "./vite": "./src/vite.ts",
     "./server.ts": "./src/server.ts",
     "./client.ts": "./src/client.ts",
     "./jsx-runtime": "./src/jsxRuntime.ts",
