--- a/apps/homepage/package.json
+++ b/apps/homepage/package.json
@@ -15,6 +15,8 @@
     "juno-astro": "file:../../packages/juno-astro",
     "monaco-editor": "0.54.0",
     "monaco-themes": "0.4.7",
+    "oxc-transform": "0.95.0",
+    "prettier": "3.6.2",
     "tailwindcss": "4.1.14",
     "terser": "5.44.0"
   },
