--- a/packages/juno-astro/package.json
+++ b/packages/juno-astro/package.json
@@ -7,7 +7,8 @@
     "./server.ts": "./src/server.ts",
     "./client.ts": "./src/client.ts",
     "./jsx-runtime": "./src/jsxRuntime.ts",
-    "./jsx-dev-runtime": "./src/jsxRuntime.ts"
+    "./jsx-dev-runtime": "./src/jsxRuntime.ts",
+    "./clientTransform": "./src/clientTransform.ts"
   },
   "files": [
     "src"
